WIP: Favor UI improvements and 3-layer button fix
- Fix corrupted button images in NPCFavorManagementDialog using 3-layer
  button pattern (Bitmap bg + invisible Button hit + Text label)
- Add hover effects for all favor management buttons
- Fix ButtonBox nesting in dialog XML
- NPC Admin dialogs (list + edit) for debug/testing
- NPC AI enhancements and field work updates
- Relationship manager additions
- Settings and GUI integration updates
- New translation keys across all 10 languages
- Favor HUD overlay system
- Add developer environments table to CLAUDE.md for multi-contributor paths

--- a/translations/lang_br.xml
+++ b/translations/lang_br.xml
@@ -140,5 +140,24 @@
 		<text name="button_complete" text="Completar" />
 		<text name="input_FAVOR_MENU" text="Menu de favores" />
 		<text name="input_NPC_LIST" text="Lista NPC" />
+			<text name="npc_schedule_plans" text="Meus planos:" />
+		<text name="input_HUD_EDIT_MODE" text="Editar HUD" />
+		<text name="npc_hud_drag_hint" text="Arraste para mover" />
+		<text name="npc_hud_locked_short" text="Bloquear HUD de favores" />
+		<text name="npc_hud_locked_long" text="Quando bloqueado, a lista de favores não pode ser movida com F8" />
+		<text name="npc_hud_scale_short" text="Tamanho do HUD" />
+		<text name="npc_hud_scale_long" text="Tamanho da lista de favores ativos na tela" />
+		<text name="npc_admin_title" text="Painel Admin NPC" />
+		<text name="npc_admin_subtitle_fmt" text="%d NPCs ativos  |  Clique Editar para ajustar" />
+		<text name="npc_admin_no_npcs" text="Nenhum NPC ativo. NPCs aparecerão após a inicialização." />
+		<text name="npc_admin_footer" text="Clique Editar para ajustar valores de relacionamento" />
+		<text name="npc_admin_edit_title" text="Editar NPC: %s" />
+		<text name="npc_admin_relationship_label" text="Relacionamento:" />
+		<text name="npc_admin_increase" text="Aumentar relacionamento" />
+		<text name="npc_admin_decrease" text="Diminuir relacionamento" />
+		<text name="npc_admin_adjusted" text="Ajustado: %s%d (agora %d/100)" />
+		<text name="npc_admin_back" text="Voltar" />
+		<text name="npc_admin_edit" text="Editar" />
+		<text name="npc_admin_col_personality" text="Personalidade" />
 	</texts>
 </l10n>
